[package]
name = "ternary_heap"
version = "0.1.0"
authors = ["Toaster <14080501+iamthetoaster@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
rand = { version = "0.8.3", features = ["small_rng"] }